--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,5 +12,10 @@ services:
       JWT_SECRET_EXPIRES_IN: ${JWT_SECRET_EXPIRES_IN}
       PORT: 5500
       GOOGLE_RECAPTCHA_SECRET_KEY: ${GOOGLE_RECAPTCHA_SECRET_KEY}
+      DB_HOST: ${DB_HOST}
+      DB_PORT: ${DB_PORT}
+      DB_USERNAME: ${DB_USERNAME}
+      DB_PASSWORD: ${DB_PASSWORD}
+      DB_NAME: ${DB_NAME}
 
     restart: always
