--- a/package.json
+++ b/package.json
@@ -27,11 +27,14 @@
     "@nestjs/microservices": "^11.0.11",
     "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^11.0.1",
+    "@nestjs/typeorm": "^11.0.0",
     "@nestlab/google-recaptcha": "^3.9.0",
+    "bcrypt": "^5.1.1",
     "express-rate-limit": "^7.5.0",
     "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.2.2",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "typeorm": "^0.3.21"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
